--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.20.7",
     "axios": "^0.27.2",
+    "jwt-decode": "^3.1.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "redux-persist": "^6.0.0",
+    "redux-persist-transform-encrypt": "^3.0.1",
     "reselect": "^4.1.6",
     "sass": "^1.52.3",
     "web-vitals": "^2.1.4"
